--- a/坑.md
+++ b/坑.md
@@ -1,6 +1,10 @@
-# 1) 不要用$(this)获取宽度和高度
-## 可以用 $('.select') 获取
+## 1) 不要用$(this)获取宽度和高度
+### 可以用 $('.select') 获取
 ```
 $(this).width();
 $(this).height();
 ```
+## 2)尽量不用 margin 而是使用padding
+### margin 会导致父层级元素margin属性改变
+
+### 3)
