--- a/坑.md
+++ b/坑.md
@@ -7,4 +7,15 @@ $(this).height();
 ## 2)尽量不用 margin 而是使用padding
 ### margin 会导致父层级元素margin属性改变
 
-### 3)
+## 3)requestAnimationFrame尽量别在mobile端使用
+###mobile端尽量用 settiemout 函数，虽然不标准，但是兼容所有webview内核
+```
+function updateScreen(time) {
+  // Make visual updates here.
+}
+requestAnimationFrame(updateScreen);
+//cancelAnimationFrame(updateScreen);
+```
+
+## 4)在做转盘之类的效果时，注意转的是盘，而不是指针。
+### 根据人眼的原理，指针旋转时看起来会有卡顿，而转盘则不会。
