--- a/优化.md
+++ b/优化.md
@@ -28,3 +28,11 @@
 ##6)图片需要更丰富的颜色及更好压缩比时，使用 PNG 而不是 GIF。
 ##7)长动画考虑使用 <video>，能提供更好的图片质量，还允许用户控制回放。
 
+###8) ie 6 (现在应该不用考虑了)
+```
+<!--[if IE 6]>
+<div class="IE6notice"> 
+    IE6用户,您好：您的浏览器需要升级以得到更好的浏览效果 。
+</div>
+```
+<![endif]-->
